Fix item page large col overflow bugs

--- a/web/html/assets/css/main.css
+++ b/web/html/assets/css/main.css
@@ -322,7 +322,6 @@ footer {
 
 .nowrap {white-space: nowrap}
 
-
 /*------------------------------------------------------------------------------------------------------------
 // Buffering
 //----------------------------------------------------------------------------------------------------------*/
@@ -348,4 +347,12 @@ footer {
 @keyframes buffering {
   0%   {transform: rotate(0deg)}
   100% {transform: rotate(360deg)}
+}
+
+/*------------------------------------------------------------------------------------------------------------
+// Misc
+//----------------------------------------------------------------------------------------------------------*/
+
+.mh-item-largeCol {
+  max-height: 120px;
 }
